@@ -10,73 +10,79 @@ import com.aztsoft.gym.domain.CustomerRegistration;
 import com.aztsoft.gym.service.CustomerService;
 import com.aztsoft.gym.service.CustomerServiceImp;
 import com.aztsoft.gym.view.CustomerForm;
+import com.aztsoft.gym.view.ViewForm;
 import com.toedter.calendar.JDateChooser;
 import org.apache.commons.lang3.StringUtils;
 
 import java.text.SimpleDateFormat;
+import java.util.List;
 
 /**
  *
  * @author arnold9108@gmail.com 11/09/2017
  */
 public class CustomerControllerImp implements CustomerController {
-
     private static final int VISIT = 0;
-    private final CustomerService customerService;
-    private final CustomerForm customerView;
+    private CustomerForm customerForm;
 
-    public CustomerControllerImp(CustomerForm customerView) {
-
-        this.customerView = customerView;
-        customerService = new CustomerServiceImp(customerView);
-        startView();
+    public CustomerControllerImp(ViewForm view) {
+        setView(view);
+        startView(view);
     }
 
-    private void startView() {
-        customerView.startView();
+    private void setView(ViewForm view){
+        if(view instanceof CustomerForm) {
+            this.customerForm = (CustomerForm) view;
+        }
     }
 
+    private void startView(ViewForm view) {
+        view.startView();
+    }
+    
     @Override
-    public void postCustomer() {
+    public final void postCustomer() {
+        CustomerService customerService = new CustomerServiceImp(customerForm);
         customerService.postCustomer(getDataRegistry());
     }
 
     private CustomerRegistration getDataRegistry() {
-
         CustomerRegistration aRegistry = new CustomerRegistration();
         aRegistry.setCustomer(getDataClient());
-        aRegistry.setPlan((String) customerView.cmbPlan.getSelectedItem());
-        aRegistry.setRegistrationDate(customerView.lblDate.getText());
-        aRegistry.setRegistrationLimit(getFormatDate(customerView.jdcLimitDate));
-
-        if(customerView.cmbPlan.getSelectedIndex() > VISIT)
-            aRegistry.setRegistrationLimit(getFormatDate(customerView.jdcLimitDate));
-
-        if(StringUtils.isNotBlank(customerView.txtCost.getText()))
-            aRegistry.setCost(new Double(customerView.txtCost.getText()));
-
+        aRegistry.setPlan((String) customerForm.cmbPlan.getSelectedItem());
+        aRegistry.setRegistrationDate(customerForm.lblDate.getText());
+        aRegistry.setRegistrationLimit(getFormatDate(customerForm.jdcLimitDate));
+        if(customerForm.cmbPlan.getSelectedIndex() > VISIT) {
+            aRegistry.setRegistrationLimit(getFormatDate(customerForm.jdcLimitDate));
+        }
+        if(StringUtils.isNotBlank(customerForm.txtCost.getText())) {
+            aRegistry.setCost(new Double(customerForm.txtCost.getText()));
+        }
         return aRegistry;
     }
 
     private Customer getDataClient() {
-
         Customer aClient = new Customer();
-        aClient.setName(customerView.txtName.getText());
+        aClient.setName(customerForm.txtName.getText());
         aClient.setAge(getAgeClient());
-        aClient.setAddress(customerView.txaAddress.getText());
-        aClient.setPhoto(customerView.imageBlob);
-
+        aClient.setAddress(customerForm.txaAddress.getText());
+        aClient.setPhoto(customerForm.imageBlob);
         return aClient;
     }
 
     private int getAgeClient() {
-        return customerView.txtAge.getText().equals("") ? 0 : new Integer(customerView.txtAge.getText());
+        return customerForm.txtAge.getText().equals("") ? 0 : Integer.valueOf(customerForm.txtAge.getText());
     }
 
     private String getFormatDate(JDateChooser dateChooser){
-
         SimpleDateFormat format = new SimpleDateFormat("dd-MM-yyyy");
         return dateChooser == null ? null : format.format(dateChooser.getDate());
+    }
+
+    @Override
+    public final List<CustomerRegistration> getAllCustomerRecords() {
+        CustomerService customerService = new CustomerServiceImp();
+        return customerService.getAllCustomerRecords();
     }
 
 }
